# Python_Spotify_Data_Scraper

./: .cache  Dockerfile  ETL_test.py  GDrive_Credentials.json  G_Drive_Credentials.json  README.md  User_Guide  crontab  data_CSV.csv  deployment.yaml  pyproject.toml  requirements.txt  spotify_credentials.json
